--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,12 @@
 {
-  "name": "Registro de Novedad",
-  "short_name": "Novedad",
-  "description": "Sistema de registro inmediato de novedades clínicas mediante QR o enlace directo",
+  "name": "Registro Integral de Salud",
+  "short_name": "Registro Salud",
   "start_url": "./index.html",
-  "scope": "./",
   "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#f1f4f8",
-  "theme_color": "#0d6efd",
+  "background_color": "#0f2027",
+  "theme_color": "#0f2027",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
